# seismiclab

./: INSTALL.md  LICENSE  Readme.md  pyproject.toml  requirements.txt
docs/: README.md  demos.md
examples/: DEMO_COMPARISON.md  README.md  __init__.py  fx_decon_demo.py  generate_figs.py  med_demo.py  moveout_demo.py  parabolic_moveout_demo.py  pocs_demo.py  radon_demo_1.py  radon_demo_2.py  run_all_demos.py  sparse_decon_demo.py  spiking_decon_demo.py  spitz_demo.py  va_demo.py
examples/data/: contents.py
matlab/SETPATH/: setpath.m
matlab/SeismicLab_demos/: matlab_radon_demo_1.mat  matlab_radon_demo_2.mat  matlab_spiking_decon_demo.mat  run_spiking.m  spiking_decon_demo.m  syn_cmp_inmo.su  syn_cmp_nmo_py.su
seismiclab/: __init__.py  decon.py  fx.py  io.py  med_alg.py  plotting.py  pocs.py  radon.py  spectra.py  synthetics.py  util.py  velan_nmo.py
seismiclab/bp_filter/: __init__.py  bp_filter.py
seismiclab/dephasing/: __init__.py  phase_correction.py
seismiclab/fxy_eigen/: __init__.py  fxy_eigen_images.py
seismiclab/kl_transform/: __init__.py  kl.py
seismiclab/linear_operators/: Matrix_Multiply_operator.py  Mutes_operator.py  NMO_operator.py  Operator_Radon_Freq.py  Operator_Radon_Stolt.py  __init__.py  ash_radon_tx.py  radon_fx.py  radon_general_tx.py  radon_tx.py
seismiclab/mssa/: __init__.py  mssa_2d.py  mssa_3d.py  mssa_3d_interp.py
seismiclab/mwni/: __init__.py  mwni.py
seismiclab/pmf/: __init__.py  pmf.py
seismiclab/rank_reduction/: __init__.py  cur.py  cur_Old.py  rand_svd.py  rqrd.py
seismiclab/scaling_tapering/: __init__.py  taper.py
seismiclab/solvers/: __init__.py  cgdot.py  cgls.py  cglsw.py  fista.py  irls.py  power_method.py  thresholding.py
